# trueform

./: .gitignore  AGENTS.md  README.md  architecture.md  package-lock.json  package.json  todos.md  tsconfig.json  typedoc.json
aidocs/: TODOs.md  architecture.md  assembly-document-structure-plan.md  assembly-implementation.md  backend-interface.md  cad-agent.md  docs-map.md  execution-notes-2026-03-01.md  feature-implementation-fti.md  geometric-abstractions.md  spec.md  step1-v1-contract.md  summary.md  webapp-preparation.md
docs/: index.md
native/occt_server/: CMakeLists.txt  README.md  main.cpp
specs/: advanced-surfacing-three-slices-plan.md  curve-foundation-plan-2026-03-30.md  docs-map.md  feature-sandbox-task-list.md  feature-staging.md  functional-tolerancing-intent.md  geometric-abstractions.md  geometric-benchmark-corpus.json  geometric-benchmark-corpus.md  geometric-parity-matrix.md  geometric-parity-plan.md  maintainability-refactor-backlog-2026-03-10.md  native-package-completion-plan-2026-03-13.md  packaging-split-timeline.md  pre-feature-sprint-board.md  refactor-plan-2026-02-22.md  runtime-contract.md  runtime-improvement-tracker.md  semantic-topology-beta-scope-2026-03-02.md  semantic-topology-runtime-fixtures-2026-03-02.md  sketch-constraint-solver-outline.md  sketch-dimensioning-truecad-plan.md  sketch-dimensioning-trueform-plan.md  sketch-solver-truecad-backlog.md  sketch-webapp-runtime-contract.md  spec.md  summary.md  task-review-2026-03-13.md  topology-selection-stabilization-plan-2026-03-01.md  truecad-integration-handoff-2026-03-02.md  (+4 more)
(+434 files in other folders)
